# cses-problem-set

./: .gitignore  README.md  scanner.rs  template.rs  template2.rs  tokenizer.rs
01-Introductory_Problems/: 001-weird_algorithm.rs  002-missing_number.rs  003-repetitions.rs  004-increasing_array.rs  005-permutations.rs  006-number_spiral.rs  007-two_knights.rs  008-two_sets.rs  009-bit_strings.rs  010-trailing_zeroes.rs  011-coin_piles.rs  012-palindrome_reorder.rs  013-gray_code.rs  014-tower_of_hanoi.rs  015-creating_strings.rs  016-apple_division.rs  017-chessboard_and_queens.rs  018-digit_queries.rs  019-grid_paths.rs  apple_division.rs  creating_strings.rs  digit_queries.rs  gray_code.rs  grid_paths.rs  two_sets.rs
02-Sorting_and_Searching/: 01-distinct_numbers.rs  02-apartments.rs  020-distinct_numbers.rs  021-apartments.rs  022-ferris_wheel.rs  023-concert_tickets.rs  024-resturant_customers.rs  025-movie_festival.rs  026-sum_of_two_values.rs  027-maximum_subarray_sum.rs  028-stick_lengths.rs  029-missing_coin_sum.rs  030-collecting_numbers.rs  031-collecting_numbers_II.rs  032-playlist.rs  033-towers.rs  034-traffic_lights.rs  035-josephus_problem_I.rs  036-josephus_problem_II.rs  037-nested_ranges_check.rs
03-Dynamic_Programming/: 055-dice_combinations.rs  056-minimizing_coins.rs  057-coin_combinations_I.rs
cses/: weird_algorithm.rs
cses/Introductory_Problems/: coin_piles.rs  increasing_array.rs  missing_number.rs  number_spiral.rs  palindrome_reorder.rs  (+4 more)
scrape/: Cargo.toml
scrape/src/: lib.rs  main.rs
templates/: scanner1.rs  scanner2.rs
