[package]
name = "scrape"
version = "0.1.0"
edition = "2021"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["cookies"] }
scraper = "0.19.0"
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
